--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -1,10 +1,24 @@
+{% load staticfiles %}
+
 <html>
 <head>
-
+    <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
 </head>
 
 <body>
 {% block content %}
 {% endblock %}
+
+    <!-- jQuery -->
+    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 </html>
