--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -1,24 +1,29 @@
 {% load staticfiles %}
-
+<!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
 </head>
 
 <body>
-{% block content %}
-{% endblock %}
+    <div id="page-header" class="page-header">
+        <h1>eBay Analytics</h1>
+    </div>
+
+    {% block content %}
+    {% endblock %}
 
     <!-- jQuery -->
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="{% static '/static/js/jquery-1.10.2.min.js' %}"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static '/static/css/bootstrap.min.css' %}">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static '/static/css/bootstrap-theme.min.css' %}">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="{% static '/static/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
