worked on templates

--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -49,9 +49,11 @@
 
 	    <select id = "second-choice">
 	    </select>
-	<script>("#first-choice").change(function() {
-   $("#second-choice").load("textdata/" + $(this).val() + ".txt");
-});</script>	
+	<script>
+        $("#first-choice").change(function() {
+            $("#second-choice").load("textdata/" + $(this).val() + ".txt");
+        });
+    </script>	
             <input type='submit'>
         </form>
     </div>
