--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -1,9 +1,18 @@
+{% load staticfiles %}
+
 <html>
 <head>
+<link rel="stylesheet" href="{% static '/static/css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static '/static/css/bootstrap-theme.min.css' %}">
+<link rel="stylesheet" href="{% static '/static/css/main.css' %}">
 </head>
 
 <body>
 {% block content %}
 {% endblock %}
+
+<!-- script -->
+<script src="{% static '/static/js/bootstrap.min.js' %}" />
+<script src="{% static '/static/js/jquery-1.10.2.min.js' %}" />
 </body>
 </html>
