--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -12,7 +12,8 @@
 {% endblock %}
 
 <!-- script -->
-<script src="{% static '/static/js/bootstrap.min.js' %}" />
-<script src="{% static '/static/js/jquery-1.10.2.min.js' %}" />
+<script src="{% static '/static/js/jquery-1.10.2.min.js' %}"></script>
+<script src="{% static '/static/js/bootstrap.min.js' %}"></script>
+<script src="{% static '/static/js/main.js' %}"></script>
 </body>
 </html>
