--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -47,11 +47,30 @@
                 <option value='99'>Everything Else</option>
             </select>
 
-	    <select id = "second-choice">
-	    </select>
+            <select id = "second-choice">
+                <option>Select a Sub-Category</option>
+            </select>
         
-        <script>
-        </script>	
+            <table id='fake-table'>
+            </table>
+
+            <script>
+                // Find a <table> element with id="myTable":
+                var table = document.getElementById("fake-table");
+                for (var i=10; i>0; i--) {
+                    // Create an empty <tr> element and add it to the 1st position of the table:
+                    var row = table.insertRow(10-i);
+
+                    // Insert new cells (<td> elements) at the 1st and 2nd position of the "new" <tr> element:
+                    var cell1 = row.insertCell(0);
+                    var cell2 = row.insertCell(1);
+
+                    // Add some text to the new cells:
+                    cell1.innerHTML = i;
+                    cell2.innerHTML = i;
+                } 
+            </script>	
+
             <input type='submit'>
         </form>
     </div>
