--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -15,5 +15,8 @@
 <script src="{% static '/static/js/jquery-1.10.2.min.js' %}"></script>
 <script src="{% static '/static/js/bootstrap.min.js' %}"></script>
 <script src="{% static '/static/js/main.js' %}"></script>
+<script src="{% static '/static/js/canvasjs.js' %}"></script>
+<script src="{% static '/static/js/canvasjs.min.js' %}"></script>
+<script src="{% static '/static/js/excanvas.js' %}"></script>
 </body>
 </html>
