--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -59,36 +59,24 @@
 
     <div class="row">
         <div class="col-lg-12">
-                <table id='fake-table'>
-
+                <table id='average-table' style="visibility:hidden;">
+                    {% for key, value in averages.items %}
+                        <tr>
+                            <td>{{ key }}</td>
+                            <td>{{ value }}</td>
+                        </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
-
-            <script>
-                // Find a <table> element with id="myTable":
-                var table = document.getElementById("fake-table");
-                for (var i=10; i>0; i--) {
-                    // Create an empty <tr> element and add it to the 1st position of the table:
-                    var row = table.insertRow(10-i);
-
-                    // Insert new cells (<td> elements) at the 1st and 2nd position of the "new" <tr> element:
-                    var cell1 = row.insertCell(0);
-                    var cell2 = row.insertCell(1);
-
-                    // Add some text to the new cells:
-                    cell1.innerHTML = i;
-                    cell2.innerHTML = i;
-                } 
-            </script>  
-
-                <div class="row">
-                <div class="col-lg-8 col-centered">
-                    <div id="chartContainer">
+        
+        <div class="row">
+            <div class="col-lg-8 col-centered">
+                <div id="chartContainer">
                     <canvas style="height: 300px; width: 50%;">
                     </canvas>
-                    </div>
                 </div>
             </div>
+        </div>
 </div>
 {% endblock %}
