--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static '/static/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static '/static/css/bootstrap-theme.min.css' %}">
 <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
+<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
