ordered results in graph

--- a/ebay_history/static/css/main.css
+++ b/ebay_history/static/css/main.css
@@ -20,8 +20,11 @@
 	font-family: 'Lato', sans-serif;
 	padding-top: 10px;
 	padding-bottom: 10px;
+    width: 600px;
 }
-
+#keywords[type=text] {
+    cursor:none;
+}
 /*#keywords[placeholder]{
 	text-align: center;
 }*/
