--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -23,7 +23,7 @@
             </div>
 
             <div id="submitButton" class="row">
-                <input type='submit'>
+                <input type='submit' value='Appraise'>
             </div>
         </form>
     </div>
@@ -31,10 +31,10 @@
     <div class="row">
         <div class="col-lg-12">
                 <table id='average-table' style="display:none;">
-                    {% for key, value in averages.items %}
+                    {% for item in averages %}
                         <tr>
-                            <td>{{ key }}</td>
-                            <td>{{ value }}</td>
+                            <td>{{ item.0 }}</td>
+                            <td>{{ item.1 }}</td>
                         </tr>
                     {% endfor %}
                 </table>
