--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+<div class="container pull-center">
+    <div class="row">
+        <div class="page-header">
+            <h1>Dat Price <small>eBay Price Prediction and Advisory</small></h1>
+        </div>
+    </div>
+</div>
+
 {% block content %}
 {% endblock %}
 
