--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             <div class="row">
                 <label for='keywords'></label>
-                <input type='text' id='keywords' name='keywords' placeholder='What are you looking for?'>
+                <input type='text' id='keywords' name='keywords' placeholder='What are you looking to sell?'>
             </div>
 
             <div id="categoryMenus" class="row">
@@ -23,7 +23,7 @@
             </div>
 
             <div id="submitButton" class="row">
-                <input type='submit' value='Appraise'>
+                <input class='btn btn-primary' type='submit' value='Appraise'>
             </div>
         </form>
     </div>
