changed search text

--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             <div class="row">
                 <label for='keywords'></label>
-                <input type='text' id='keywords' name='keywords' placeholder='What are you looking to sell?'>
+                <input type='text' id='keywords' name='keywords' placeholder='What would you like to appraise?'>
             </div>
 
             <div id="categoryMenus" class="row">
