--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -12,7 +12,7 @@
 <div class="container pull-center">
     <div class="row">
         <div class="page-header">
-            <h1>Dat Price <small>eBay Price Prediction and Advisory</small></h1>
+            <h1 id="name">Dat Price <small>eBay Price Prediction and Advisory</small></h1>
         </div>
     </div>
 </div>
