adjusted name/logo to top left corner

--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-<div class="container pull-center">
+<div class="container pull-left">
     <div class="row">
-        <div class="page-header">
-            <h1 id="name">Dat Price <small>eBay Price Prediction and Advisory</small></h1>
+        <div id="page-header">
+            <h1 id="name" style="display: inline;" >Dat Price</h1><small id="tagline">eBay Price Prediction and Advisory</small>
         </div>
     </div>
     <div class="row">
