--- a/ebay_history/static/css/main.css
+++ b/ebay_history/static/css/main.css
@@ -3,8 +3,8 @@
     margin: 0 auto;
 }
 
-.pull-center {
-    text-align:center;
+.pull-left {
+    text-align:left;
 }
 
 #search-div {
@@ -12,17 +12,20 @@
 }
 
 #page-header {
-    text-align: center;
+    text-align: left;
+    vertical-align: top;
+    margin-left: 15px;
+    margin-top: 15px;
 }
 
 h1{
 	font-family: 'Lato', sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	padding-right: 8px;
 
 }
-.name {
-	font-family: 'Lato', sans-serif;
 
-}
 
 #keywords {
 	outline: 0 !important;
@@ -54,6 +57,10 @@ h1{
 #name{
 	font-weight: bold;
 	color: #333333;
+}
+
+#tagline{
+	color: #999999;
 }
 
 #submitButton{
