--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -10,16 +10,18 @@
 </head>
 
 <body>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="container pull-left">
     <div class="row">
         <div id="page-header">
             <h1 id="name" style="display: inline;" >Dat Price</h1><small id="tagline">eBay Price Prediction and Advisory</small>
         </div>
     </div>
+</nav>
     <div class="row">
         {% block content %}
         {% endblock %}
-    </div>
+	</div>
 </div>
 
 <!-- script -->
