--- a/ebay_history/static/css/main.css
+++ b/ebay_history/static/css/main.css
@@ -20,6 +20,22 @@
     height: 200px !important;
 }
 
+#placeholder {
+    height: 60px;
+}
+
+.item-tile {
+    height: 330px;
+}
+
+.tile-container {
+    width:90%;
+    text-align: center;
+}
+#tile-holder {
+    margin: 0 auto;
+}
+
 #page-header {
     text-align: left;
     vertical-align: top;
