--- a/ebay_history/templates/similar-listings.html
+++ b/ebay_history/templates/similar-listings.html
@@ -20,7 +20,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    ${{ item.price }}
+                    ${{ item.price|floatformat:2 }}
                 </div>
             </div>
             <div class="row">
