--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -23,7 +23,14 @@
         {% endblock %}
 	</div>
 </div>
-
+<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+<div class="container pull-left">
+    <div class="row">
+        <div id="page-footer">
+            <small id="credits">Hacked at The HackTech 2014 by <a href="https://twitter.com/craig_palermo">Craig Palermo</a>, <a href="https://twitter.com/brittbinler">Brittany Binler</a>, <a href="https://twitter.com/rwolniak">Ryan Wolniak</a>, and <a href="https://.twitter.com/">Kunal Sharma</a></small>
+        </div>
+    </div>
+</nav>
 <!-- script -->
 <script src="{% static '/static/js/jquery-1.10.2.min.js' %}"></script>
 <script src="{% static '/static/js/bootstrap.min.js' %}"></script>
