fixed errors with empty results and added descriptive error messages

--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -31,6 +31,7 @@
     </div>
 
     <div class="row">
+        {% if averages %}
         <div class="col-lg-12">
                 <table id='average-table' style="display:none;">
                     {% for item in averages %}
@@ -58,5 +59,11 @@
             </div>
         </div>
         {% endif %}
-</div>
+        {% else %}
+        <div class="col-md-12 pull-center">
+            <h3>Your search did not return any results!</h3>
+            <h4>Try using more specific keywords.</h4>
+        </div>
+        {% endif %} 
+    </div>
 {% endblock %}
