--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -59,7 +59,9 @@
             </div>
         </div>
         {% endif %}
-        {% else %}
+        {% endif %}
+
+        {% if no_results %}
         <div class="col-md-12 pull-center">
             <h3>Your search did not return any results!</h3>
             <h4>Try using more specific keywords.</h4>
