changed prompt and shop button text

--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             <div class="row">
                 <label for='keywords'></label>
-                <input type='text' id='keywords' name='keywords' placeholder='What would you like to appraise?'>
+                <input type='text' id='keywords' name='keywords' placeholder='What are you looking for?'>
             </div>
 
             <div id="categoryMenus" class="row">
@@ -25,7 +25,7 @@
 
             <div id="submitButton" class="row">
                 <input class='btn btn-primary btn-lg' type='button' value='Appraise' id="appraise-button">
-                <input class='btn btn-primary btn-lg' type='button' value='Find Similar Items' id="similar-button">
+                <input class='btn btn-primary btn-lg' type='button' value='Shop' id="similar-button">
             </div>
         </form>
     </div>
