page auto scrolls to focus on chart after form submit

--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -40,5 +40,6 @@
 <script src="{% static '/static/js/excanvas.js' %}"></script>
 <script src="{% static '/static/DataTables-1.9.4/media/js/jquery.dataTables.min.js' %}"></script>
 
+{% block extrascripts %}{% endblock %}
 </body>
 </html>
