changed wording on home page

--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -14,7 +14,7 @@
 <div class="container pull-left">
     <div class="row">
         <div id="page-header">
-            <h1 id="name" style="display: inline;"><a href="/">Dat Price</a></h1><small id="tagline">eBay Price Prediction and Advisory</small>
+            <h1 id="name" style="display: inline;"><a href="/">Dat Price</a></h1><small id="tagline">eBay Appraiser and Thrift Assistant</small>
         </div>
     </div>
 </nav>
