--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
 <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{% static '/static/DataTables-1.9.4/media/css/jquery.dataTables.css' %}">
+<title>Dat Price</title>
 </head>
 
 <body>
