--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
 <div class="container pull-left">
     <div class="row">
         <div id="page-header">
@@ -19,6 +19,7 @@
         </div>
     </div>
 </nav>
+
     <div class="row">
         {% block content %}
         {% endblock %}
