--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -11,15 +11,14 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="navbar">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <div class="container pull-left">
     <div class="row">
         <div id="page-header">
-            <h1 id="name" style="display: inline;"><a href="/">Dat Price</a></h1><small id="tagline">eBay Appraiser and Thrift Assistant</small>
+            <h1 id="name" style="display: inline;"><a href="/">Dat Price</a></h1><small id="tagline">eBay Sidekick</small>
         </div>
     </div>
 </nav>
-
     <div class="row">
         {% block content %}
         {% endblock %}
@@ -29,7 +28,7 @@
 <div class="container pull-left">
     <div class="row">
         <div id="page-footer">
-            <small id="credits">Hacked at The HackTech 2014 by <a href="https://twitter.com/craig_palermo">Craig Palermo</a>, <a href="https://twitter.com/brittbinler">Brittany Binler</a>, <a href="https://twitter.com/rwolniak">Ryan Wolniak</a>, and <a href="https://.twitter.com/kunals1994">Kunal Sharma</a></small>
+            <small id="credits">Hacked at The HackTech 2014 by <a href="https://twitter.com/craig_palermo">Craig Palermo</a>, <a href="https://twitter.com/brittbinler">Brittany Binler</a>, <a href="https://twitter.com/rwolniak">Ryan Wolniak</a>, and <a href="https://.twitter.com/">Kunal Sharma</a></small>
         </div>
     </div>
 </nav>
