--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -8,6 +8,7 @@
 <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{% static '/static/DataTables-1.9.4/media/css/jquery.dataTables.css' %}">
 <title>Dat Price</title>
+<link rel="icon" type="image/png" href="{% static '/static/img/favicon.ico' %}">
 </head>
 
 <body>
