--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -34,7 +34,7 @@
         <div class="container pull-left">
             <div class="row">
                 <div id="page-footer">
-                    <small id="credits">Hacked at The HackTech 2014 by <a href="https://twitter.com/craig_palermo">Craig Palermo</a>, <a href="https://twitter.com/brittbinler">Brittany Binler</a>, <a href="https://twitter.com/rwolniak">Ryan Wolniak</a>, and <a href="https://.twitter.com/">Kunal Sharma</a></small>
+                    <small id="credits">Hacked at HackTech 2014 by <a href="https://twitter.com/craig_palermo">Craig Palermo</a>, <a href="https://twitter.com/brittbinler">Brittany Binler</a>, <a href="https://twitter.com/rwolniak">Ryan Wolniak</a>, and <a href="https://.twitter.com/">Kunal Sharma</a></small>
                 </div>
             </div>
         </div>
