--- a/ebay_history/templates/similar-listings.html
+++ b/ebay_history/templates/similar-listings.html
@@ -20,7 +20,7 @@
 </div>
 <div class="row">
     {% for item in items %}
-        <div class="col-md-3 item-tile">
+        <div class="col-md-3 col-sm-12 item-tile">
             <div class="row">
                 <div class="col-md-12">
                     <img id="{{ forloop.counter }}-image" src="{{ item.galleryURL }}" class='img-thumbnail'>   
