--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="row">
-    <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+    <nav class="hidden-xs navbar navbar-default navbar-fixed-bottom" role="navigation">
         <div class="container pull-left">
             <div class="row">
                 <div id="page-footer">
