--- a/ebay_history/templates/base.html
+++ b/ebay_history/templates/base.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="{% static '/static/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static '/static/css/bootstrap-theme.min.css' %}">
 <link rel="stylesheet" href="{% static '/static/css/main.css' %}">
