--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -21,7 +21,7 @@
                     {% include 'category-options.html' %}
                 </select>
 
-                <div class="col-sm-12 visible-sm">
+                <div id="selector-gap" class="col-sm-12 visible-sm">
                     <br/>
                 </div>
 
