similar items page now uses get request

--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="row">
     <div id="search-div" class="col-lg-12 col-centered">
-        <form id='search-form' name='search' method='post'>
+        <form id='search-form' name='search' method='get'>
             {% csrf_token %}
             <div class="row">
                 <div class="col-lg-12 hidden-xs">
