--- a/ebay_history/templates/home.html
+++ b/ebay_history/templates/home.html
@@ -8,10 +8,10 @@
             {% csrf_token %}
             <div class="row">
                 <div class="col-lg-12 hidden-xs">
-                    <input type='text' class='search_box' id='keywords' name='keywords' placeholder='What are you looking for?'>
+                    <input type='text' class='search_box' id='keywords' name='keywords-1' placeholder='What are you looking for?'>
                 </div>
                 <div class="col-lg-12 visible-xs pull-center">
-                    <input type='text' class='search_box' name='keywords' id="keywords-sm" placeholder="What are you looking for?">
+                    <input type='text' class='search_box' name='keywords-2' id="keywords-sm" placeholder="What are you looking for?">
                 </div>
             </div>
 
